--- a/webpack-template/package.json
+++ b/webpack-template/package.json
@@ -11,6 +11,7 @@
   "author": "David Lai",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
