--- a/webpack-template/package.json
+++ b/webpack-template/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "pug": "^2.0.4",
